# LBLMuC-SiDigiDev

./: .devcontainer.json  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  SiDigiDev.code-workspace  setup.sh  vscode-howto.md
analysis/: ClusterAnalysis.C  ClusterProperties.C  MyLCTuple.h  digStudy.py  mkPlots.py
config/: lctuple_steer.xml  reco_steer.xml  reco_steer_BIB.xml  sim_steer_muonGun_MuColl_v1.py  sim_steer_protonGun.py
data/: CMakeLists.txt
data/MuColl_v1_mod0/: InnerTracker_o2_v06_01.xml  MuColl_v1_mod0.xml  OuterInnerTracker_o2_v06_01.xml
ml analysis/: separation.py
ml-analysis/: model-all-layers.py  sep_classes.py  separation.py  separation_playground.py  svd-analysis.py  svd_analysis.py  testing_separation.py  training-separation.py  training_separation.py
sim/: sim_steer_muonGun_MuColl_v1_mod0.py
